src/objects/Partner__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Roles</relationshipLabel>
        <relationshipName>CXE_Partner_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Partners__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <label>Master</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partners__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_Name__c</field>
                <operation>notEqual</operation>
                <valueField>Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Roles (Partner)</relationshipLabel>
        <relationshipName>CXE_Partner_Roles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertiser</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Franchisor</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Partner Roles</relationshipLabel>
        <relationshipName>Partner_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Role</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Partner Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>isChange</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Partners__c ) || ISCHANGED( Role__c ) || ISCHANGED( Account_Name__c )</errorConditionFormula>
        <errorMessage>Edit record is not allowed.</errorMessage>
    </validationRules>
</CustomObject>